--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,10 @@
   "builds": [
     { "src": "**/*", "use": "@vercel/static" }
   ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.html" }
-  ],
   "github": {
     "silent": true
   },
+  "cleanUrls": true,
   "headers": [
     {
       "source": "/images/(.*)",
@@ -39,5 +36,8 @@
         }
       ]
     }
+  ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 } 
